--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
   "homepage": "https://github.com/b1f6c1c4/IPA-JFK#readme",
   "dependencies": {
     "yargs": "^15.4.1"
+  },
+  "devDependencies": {
+    "mkdirp": "^1.0.4"
   }
 }
