--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,9 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+# Parcel cache
+.parcel-cache/
+
 # End of https://www.toptal.com/developers/gitignore/api/node
 
 /build
