--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prepare": "node ./scripts/download.js",
     "lint": "eslint index.js db.js src/",
     "start": "node ./bin/jfk.js",
-    "demo": "parcel demo/index.html"
+    "demo": "parcel demo/index.html",
+    "generate": "parcel build demo/index.html"
   },
   "repository": {
     "type": "git",
