--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "url": "https://github.com/b1f6c1c4/IPA-JFK/issues"
   },
   "homepage": "https://github.com/b1f6c1c4/IPA-JFK#readme",
+  "type": "module",
   "dependencies": {
     "escape-string-regexp": "^5.0.0",
     "htmlencode": "0.0.4",
